<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="au.edu.jcu.myapplication.parts.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_home_to_category"
            app:destination="@id/navigation_category" />

        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/navigation_profile" />

    </fragment>


    <fragment
        android:id="@+id/navigation_category"
        android:name="au.edu.jcu.myapplication.parts.SearchFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_search" >

        <action
            android:id="@+id/action_category_to_home"
            app:destination="@id/fragment_home" />
    </fragment>



    <fragment
        android:id="@+id/navigation_profile"
        android:name="au.edu.jcu.myapplication.parts.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >

        <action
            android:id="@+id/action_profile_to_home"
            app:destination="@id/fragment_home" />
    </fragment>

</navigation>