<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/darker_gray"
    tools:context=".parts.ProfileFragment">

    <!-- First row back button and title -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back_arrow"
            android:background="@null"
            android:contentDescription="Back"  />

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>



    <!-- Background Color Slider -->
    <TextView
        android:id="@+id/bg_color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_colour"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Spinner
        android:id="@+id/bg_color_spinner"
        android:layout_width="match_parent"
        android:background="@drawable/spinner_border"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:entries="@array/background_color_array"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/bg_color_label"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- Font Color Slider -->
    <TextView
        android:id="@+id/font_color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Font Colour"
        app:layout_constraintTop_toBottomOf="@id/bg_color_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/font_color_spinner"
        android:layout_width="0dp"
        android:paddingVertical="12dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:background="@drawable/spinner_border"
        android:max="255"
        app:layout_constraintTop_toBottomOf="@id/font_color_label"
        app:layout_constraintStart_toStartOf="parent"
        android:entries="@array/font_color_array"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Font Size Slider -->
    <TextView
        android:id="@+id/font_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Font Size"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/font_color_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
        android:id="@+id/font_size_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="16"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/font_size_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- test, save, log out buttons -->


    <Button
        android:id="@+id/save_settings_button"
        android:layout_width="match_parent"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        app:layout_constraintTop_toBottomOf="@id/font_size_slider"/>

    <Button
        android:id="@+id/log_button_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:text="@string/log_out"
        app:layout_constraintTop_toBottomOf="@id/save_settings_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>